[Emmanuel][v-1.0][feat] calculate estimation functionality

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -48,10 +48,10 @@
                 </div>
                 <div>
                     <p>¿Durante el ejercicio o deporte que practica ha tenido dolor en el pecho?</p>
-                    <input type="radio" id="radio-yes" name="question" value="Si">
+                    <input type="radio" id="radio-btn-yes" name="question" value="1">
                     <label for="radio-yes">Si.</label>
                     <br>
-                    <input type="radio" id="radio-no" name="question" value="No">
+                    <input type="radio" id="radio-btn-no" name="question" value="0">
                     <label for="radio-no">No.</label>
                 </div>
                 <div>
