--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,5 +2,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/4fa28797ee.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/stylesheets/styles.css">
     <title><%= title %>></title>
   </head>
