--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 5px;
 }
 
 .title-container .main-title {
@@ -238,3 +238,50 @@ body {
 .button-submit:active {
   transform: scale(0.95);
 }
+
+@media only screen and (min-width: 460px ) {
+  .inner-container {
+    padding: 40px;
+  }
+  .button-reset,.button-submit {
+    width: 200px;
+  }
+  
+}
+
+@media only screen and (min-width: 769px ) {
+  body {
+    background-color: rgb(239, 236, 233);
+  }
+  .main-container {
+    display: flex;
+    justify-content: center;
+  }
+  .inner-container {
+    background-color: rgb(253, 250, 247);
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 500px;
+    padding: 15px;
+    border-radius: 12px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  }
+  .title-container .main-title {
+    font-size: xx-large;
+    margin-top: 20px;
+  }
+  .form-container {
+    padding: 0px;
+  }
+  .form-btns {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .button-reset,.button-submit {
+    width: 100%;
+  }
+
+}
+
