--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -1,2 +1,3 @@
 <script type="text/javascript" src="/js/calculateFields.js"></script>
 <script type="text/javascript" src="/js/calculateValoration.js"></script>
+<script type="text/javascript" src="/js/saveInfo.js"></script>
