--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,10 +19,10 @@
             </div>
             <form class="form-container" action="" id="form" >
                 <div class="input-group">
-                    <input  class="control-form input" required type="text" name="name" id="name" placeholder="Nombre completo">
+                    <input  class="control-form input nameInput"   type="text" name="name" id="name" placeholder="Nombre completo">
                 </div>
                 <div class="input-group">
-                    <input  class="control-form input" required type="number" name="idNumber" id="idNumber" placeholder="Numero de identificacion">
+                    <input  class="control-form input"  type="number"  name="idNumber" id="idNumber" placeholder="Numero de identificacion">
                 </div>
                 <div class="input-group">
                     <input class="control-form input" type="email" name="email" id="email" placeholder="Correo electronico">
@@ -45,11 +45,11 @@
                 </div>
                 <div class="input-group-calc">
                     <label for="IMC">Tu IMC(índice de masa corporal) es:</label>
-                    <input type="text" class="IMC-input input" name="imcCalc" id="imcCalc" disabled placeholder="">
+                    <input type="text" class="IMC-input input" name="imcCalc" id="imcCalc" disabled placeholder="Ingresa los campos de altura y peso">
                 </div>
                 <div class="select-group">
                     <label for="size">Talla camiseta:</label>
-                    <select class="select" required name="size"  name="" id="size">
+                    <select class="select"  name="size"  name="size" id="size">
                         <option selected value="">Slecciona una opcion</option>
                         <option value="M">M</option>
                         <option value="L">L</option>
