[Emmanuel][v-0.1][feat] Add delete info from localStorage and details

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -38,7 +38,7 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <input class="control-form height-input input" step="any" type="number" name="height" id="height" placeholder="Altura en mts">
+                    <input class="control-form height-input input" step="any" type="number" name="height" id="height" placeholder="Altura en m">
                 </div>
                 <div class="input-group">
                     <input class="control-form weight-input input"  type="number" name="weight" id="weight" placeholder="Peso en kg">
@@ -86,7 +86,7 @@
                     
                 </div>
                 <div class="check-btn-container">
-                    <a href="" class="check-btn">Entendido</a>
+                    <button class="check-btn">Entendido</button>
                 </div>
             </div>
         </div>
