--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -1,3 +1,5 @@
 <script type="text/javascript" src="/js/calculateFields.js"></script>
 <script type="text/javascript" src="/js/calculateEstimation.js"></script>
-<script type="text/javascript" src="/js/saveInfo.js"></script>
+<script type="text/javascript" src="/js/saveData.js"></script>
+<script type="text/javascript" src="/js/deleteData.js"></script>
+
