--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,9 +5,8 @@
     <main class="main-container">
         <section class="inner-container">
             <div class="title-container">
-                
                 <div class="img-container">
-                    <img class="logo-img" src="/images/logos/logoWithoutBg.png" alt="">
+                    <img class="logo-img" src="/images/logos/logoNoBg.png" alt="">
                 </div>
                 <h1 class="main-title">Bienvenido(a)</h1>
                 <div>
@@ -19,10 +18,10 @@
             </div>
             <form class="form-container" action="" id="form" >
                 <div class="input-group">
-                    <input  class="control-form input nameInput"   type="text" name="name" id="name" placeholder="Nombre completo">
+                    <input  class="control-form input nameInput"   type="text" name="name" id="name" placeholder="Nombre completo *">
                 </div>
                 <div class="input-group">
-                    <input  class="control-form input"  type="number"  name="idNumber" id="idNumber" placeholder="Numero de identificacion">
+                    <input  class="control-form input"  type="number"  name="idNumber" id="idNumber" placeholder="Numero de identificacion *">
                 </div>
                 <div class="input-group">
                     <input class="control-form input" type="email" name="email" id="email" placeholder="Correo electronico">
@@ -50,7 +49,7 @@
                 <div class="select-group">
                     <label for="size">Talla camiseta:</label>
                     <select class="select"  name="size"  name="size" id="size">
-                        <option selected value="">Slecciona una opcion</option>
+                        <option selected value="">Selecciona una opcion *</option>
                         <option value="M">M</option>
                         <option value="L">L</option>
                         <option value="XL">XL</option>
