--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -2,7 +2,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Icons -->
     <script src="https://kit.fontawesome.com/4fa28797ee.js" crossorigin="anonymous"></script>
+    <!-- Styles -->
     <link rel="stylesheet" href="/stylesheets/styles.css">
+    <!-- Tab details -->
+    <link rel="icon" type="image/x-icon" href="/images/logos/tabIcon.png">
     <title><%= title %>></title>
   </head>
